--- a/style.css
+++ b/style.css
@@ -167,13 +167,6 @@ a{
     background-size: cover;
 }
 
-.header__favourite_hover:hover{
-    background-color: #D51544;
-}
-.header__favourite_hover:hover .header__favourite{
-    transition: 0.5s;
-    background-image: url('./img/headerWhite.png');
-}
 
 .header__search{
     width: 20px;
@@ -189,6 +182,13 @@ a{
     background-size: cover;
 }
 
+.header__favourite_active{
+    background-color: #D51544;
+}
+.header__favourite_active .header__favourite{
+    background-image: url('./img/headerWhite.png');
+    background-size: cover;
+}
 .header__basket_text{
     font-size: 18px;
     font-family: 'Montserrat', sans-serif;
@@ -1290,6 +1290,12 @@ footer{
 }
 
 @media screen and (max-width:768px){
+    .favourite__popup{
+        width: 100%;
+        right: 0;
+        border-bottom-right-radius: 0px;
+        border-bottom-left-radius: 0px;
+    }
     .search__popup{
         padding: 20px 20px;
     }
