--- a/style.css
+++ b/style.css
@@ -497,7 +497,6 @@ main{
     color: #fff;
 }
 .main__catalog_item{
-    
     background-color: #fff;
     border-radius: 10px;
     padding: 30px;
@@ -506,8 +505,28 @@ main{
     flex-direction: column;
     font-family: 'Montserrat', sans-serif;
     margin-bottom: 30px;
+    position: relative;
 }
-
+.main__catalog_background{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background-color: #D51544;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    display: none;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+}
+.main__background_center{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .main__photo{
     width: 100%;
     height: 311px;
@@ -955,6 +974,7 @@ footer{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 20px;
 }
 .popup__search_input{
     width: 90%;
@@ -969,31 +989,18 @@ footer{
     border-radius: 12px;
 }
 .search__popup_wrap{
-    margin: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    padding-bottom: 40px;
 }
 .search__card{
-    width: 49%;
     padding: 10px;
     display: flex;
     justify-content: space-between;
     background-color: #f5f5f5;
     border-radius: 12px;
     font-family: 'Montserrat', sans-serif;
-}
-.search__card:nth-child(1){
-    margin-bottom: 15px;
-}
-.search__card:nth-child(2){
-    margin-bottom: 15px;
-}
-.search__card:nth-child(3){
-    margin-bottom: 15px;
-}
-.search__card:nth-child(4){
-    margin-bottom: 15px;
 }
 .search__card_top{
     margin-left: 10px;
@@ -1005,6 +1012,7 @@ footer{
     display: flex;
 }
 .search__card_info{
+    width: 100%;
     margin-left: 10px;
     display: flex;
     flex-direction: column;
@@ -1304,6 +1312,13 @@ footer{
 }
 
 @media screen and (max-width:1024px){
+    .search__popup{
+        overflow: scroll;
+        overflow-x: hidden;
+    }
+    .search__popup_wrap{
+        grid-template-columns: repeat(1, 1fr);
+    }
     .header__nav{
         display: none;
     }
@@ -1369,6 +1384,11 @@ footer{
 }
 
 @media screen and (max-width:768px){
+    
+
+    .search__popup_wrap{
+        grid-template-columns: repeat(1, 1fr);
+    }
     .message__popup{
         width: 100%;
         right: 0%;
@@ -1386,9 +1406,6 @@ footer{
     }
     .search__card_button{
         padding: 5px;
-    }
-    .search__card_right{
-        display: none;
     }
     .burger__popup_item:nth-child(4){
         display: flex;
@@ -1567,11 +1584,17 @@ footer{
     .header__select{
         display: none;
     }
+    .main__fill_photo {
+        width: 320px;
+        height: 320px;
+        border-radius: 20px;
+    }
 }
 
 
 
 @media screen and (max-width:480px){
+    
     .burger__popup_item:nth-child(4){
         display: flex;
     }
@@ -1608,11 +1631,7 @@ footer{
     .menu-btn{
         display: flex;
     }
-    .main__fill_photo{
-        width: 320px;
-        height: 320px;
-        border-radius: 20px;
-    }
+    
     .main__banner{
         width: 320px;
         height: 320px;
